helm/in-progress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: n4-platform
  name: niagara
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - n4.ibb.test.cns.dev
    secretName: tls-n4-ingress
  rules:
  - host: "n4.ibb-01.test.cns.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-niagara
            port:
              number: 5011
  - host: "n4.ibb-01.test.cns.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-niagara
            port:
              number: 4911
  # - host: "n4.ibb-01.test.cns.dev"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: nginx
  #           port:
  #             number: 80
